--- a/crete_gis/templates/site_index.html
+++ b/crete_gis/templates/site_index.html
@@ -1,4 +1,5 @@
 {% extends 'index.html' %}
+{% load base_tags %}
 {% load i18n %}
 <title>{% block title %}Crete-GIS{% endblock %}</title>
 {% comment %}
@@ -14,5 +15,45 @@ This is where you can override the hero area block. You can simply modify the co
       <p>{% blocktrans %}<b>Τo Crete-GIS είναι ένα GeoPortal γεωχωρικών δεδομένων που αφορά την περιοχή της Κρήτης.<br>Σκοπός του είναι ο διαμοιρασμός, η ελεύθερη πρόσβαση και η επεξεργασία γεωχωρικών<br>και γεωγραφικών δεδομένων για τους πολίτες και τους κυβερνητικούς φορείς </b> {% endblocktrans %}</p>
     </div>
   </div>
-  {% endblock %}
  </div>
+  {% endblock %}
+
+ {% block mainbody %}
+ <div class="container">
+    <div class="row home-facets">
+    {% with facet_type='home' %}
+     {% facets as facets %}
+      <div class="col-md-4">
+        <p><a href="{% url "layer_browse" %}"><i class="fa fa-square-o fa-5x rotate-45"></i></a></p>
+        <h2><a href="{% url "layer_browse" %}">{{ facets.layer|default:_("No") }} {% blocktrans count counter=facets.layer %}Layer{% plural %}Layers{% endblocktrans %}</a></h2>
+        {% if user.is_authenticated %}
+        <p class="text-center"><a class="btn btn-default" href="{% url "layer_upload" %}" role="button">{% trans "Add layers" %} &raquo;</a></p>
+        {% else %}
+        <p class="text-center"><a class="btn btn-default" href="{% url "layer_browse" %}" role="button">{% trans "Explore layers" %} &raquo;</a></p>
+        {% endif %}
+      </div>
+      <div class="col-md-4">
+        <p><a href="{% url "maps_browse" %}"><i class="fa fa-map-marker fa-5x"></i></a></p>
+        <h2><a href="{% url "maps_browse" %}">{{ facets.map|default:_("No") }} {% blocktrans count counter=facets.map %}Map{% plural %}Maps{% endblocktrans %}</a></h2>
+        {% if user.is_authenticated %}
+        <p><a class="btn btn-default" href="{% url "new_map" %}" role="button">{% trans "Create maps" %} &raquo;</a></p>
+        {% else %}
+        <p><a class="btn btn-default" href="{% url "maps_browse" %}" role="button">{% trans "Explore maps" %} &raquo;</a></p>
+        {% endif %}
+      </div>
+      <div class="col-md-4">
+        <p><a href="{% url "profile_browse" %}"><i class="fa fa-user fa-5x"></i></a></p>
+        <h2><a href="{% url "profile_browse" %}">{{ facets.user|default:_("No") }} {% blocktrans count counter=facets.user %}User{% plural %}Users{% endblocktrans %}</a></h2>
+        <p><a class="btn btn-default" href="{% url "profile_browse" %}" role="button">{% trans "See users" %} &raquo;</a></p>
+      </div>
+    {% endwith %}
+    </div>
+  </div>
+  {% verbatim %}
+  <div ng-app="featured">
+    <div ng-repeat="item in featured">
+      <!--{{ item.title }}-->
+    </div>
+  </div>
+  {% endverbatim %}
+  {% endblock %}
