--- a/crete_gis/templates/site_index.html
+++ b/crete_gis/templates/site_index.html
@@ -5,15 +5,59 @@
 {% comment %}
 This is where you can override the hero area block. You can simply modify the content below or replace it wholesale to meet your own needs. 
 {% endcomment %}
-  {% block hero %}
+  {% block hero %} 
   <div class="jumbotron">
-    <div class="container">
-      <h1>{% trans "Crete-GIS project" %}</h1>
-      <div class="hero-unit-content"/>
-      <img src = '../static/img/crete_sat.jpg' height = '449' width = '953'>
- 
-      <p>{% blocktrans %}<b>Τo Crete-GIS είναι ένα GeoPortal γεωχωρικών δεδομένων που αφορά την περιοχή της Κρήτης.<br>Σκοπός του είναι ο διαμοιρασμός, η ελεύθερη πρόσβαση και η επεξεργασία γεωχωρικών<br>και γεωγραφικών δεδομένων για τους πολίτες και τους κυβερνητικούς φορείς </b> {% endblocktrans %}</p>
+  <div class="container">
+  <h1>Crete-GIS Project</h1>
+    <!-- Carousel
+  ================================================== -->
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img class="first-slide" src="../static/img/carousel_3.jpg" alt="" style=" width:100%; height: 500px;">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Καλωσήρθατε στο <strong>Crete-GIS Project</strong></h1>
+            <p class="lead"><strong>Τo Crete-GIS είναι ένα GeoPortal γεωχωρικών δεδομένων που αφορά την περιοχή της Κρήτης.</strong></p>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img class="second-slide" src="../static/img/carousel_2.jpg" alt="" style=" width:100%; height: 500px;">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Γεωχωρικά Δεδομένα</h1>
+            <p class="lead"><strong>Σκοπός του είναι ο διαμοιρασμός και η ελεύθερη πρόσβαση γεωχωρικών και γεωγραφικών δεδομένων για τους πολίτες και τους κυβερνητικούς φορείς</strong></p>
+            <a class="btn btn-danger" href="/layers/">Explore Layers</a>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img class="third-slide" src="../static/img/carousel_4.jpg" alt="" style=" width:100%; height: 500px;">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Δημιουργήστε Χάρτες </h1>
+            <p class="lead"><strong>Πλοηγηθείτε και αναζητήστε γεχωρικά δεδομένα.<br>Δημιουργήστε και εκτυπώστε τους δικούς σας χάρτες.</strong></p>
+            <a class="btn btn-danger" href="/maps/new">Create a map</a>
+          </div>
+        </div>
+      </div>
     </div>
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div><!-- /.carousel -->  
   </div>
  </div>
   {% endblock %}
