correct site_index.html docs

--- a/crete_gis/templates/site_index.html
+++ b/crete_gis/templates/site_index.html
@@ -43,7 +43,7 @@ This is where you can override the hero area block. You can simply modify the co
         <div class="container">
           <div class="carousel-caption">
             <h1>Δημιουργήστε Χάρτες </h1>
-            <p class="lead"><strong>Πλοηγηθείτε και αναζητήστε γεχωρικά δεδομένα.<br>Δημιουργήστε και εκτυπώστε τους δικούς σας χάρτες.</strong></p>
+            <p class="lead"><strong>Πλοηγηθείτε και αναζητήστε γεωχωρικά δεδομένα.<br>Δημιουργήστε και εκτυπώστε τους δικούς σας χάρτες.</strong></p>
             <a class="btn btn-danger" href="/maps/new">Create a map</a>
           </div>
         </div>
