--- a/crete_gis/templates/site_index.html
+++ b/crete_gis/templates/site_index.html
@@ -8,7 +8,7 @@ This is where you can override the hero area block. You can simply modify the co
   {% block hero %} 
   <div class="jumbotron">
   <div class="container">
-  <h1>Crete-GIS Project</h1>
+  <h1>Crete-GIS</h1>
     <!-- Carousel
   ================================================== -->
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
