adding an about page

--- a/crete_gis/templates/site_base.html
+++ b/crete_gis/templates/site_base.html
@@ -28,6 +28,12 @@
     <li><a href="{% url "new_map" %}"><{% trans "Χάρτες" %}</a></li>
   </ul>
 </li>
+
+<li id="nav_browse">
+  <a href="{% url "about" %}">{% trans "About" %}</a>
+</li>
+
+
 {% endblock %}
 
 {% block footer %} 
