add a footer image

--- a/crete_gis/templates/about.html
+++ b/crete_gis/templates/about.html
@@ -24,7 +24,7 @@
 </p>
   </div>
     <div class="col-sm-4">
-    <img src="../static/img/perifereia_logo.jpg" class="img-thumbnail" alt="senselab" width="304" height="236">
+    <img src="../static/img/perifereia_logo.jpg" class="img-thumbnail" alt="perifereia_kritis" width="304" height="236">
     <img src="../static/img/tuc.jpg" class="img-thumbnail" alt="tuc" width="150" height="150">
     <img src="../static/img/senselab_img.jpg" class="img-thumbnail" alt="senselab" width="304" height="236">
 </div>
