--- a/crete_gis/templates/site_base.html
+++ b/crete_gis/templates/site_base.html
@@ -78,7 +78,10 @@
 					{% endif %}
 				</ul>
 			</div>
-			<div class="col-md-2"></div>
+			<div class="col-md-2">
+                          <img src="../static/img/perifereia_logo.jpg" class="img-thumbnail" alt="perifereia_kritis" width="259" height="68">
+
+                          </div>
 			<div class="col-md-4 text-right">
 				<p><img src="../static/img/senselab_3.jpg"></p>
 				<ul class="list-unstyled">
