--- a/crete_gis/templates/site_base.html
+++ b/crete_gis/templates/site_base.html
@@ -1,40 +1,109 @@
 {% extends "base.html" %}
-{% load i18n %}
+{% load i18n avatar_tags %}
 {% block extra_head %}
       <link href="{{ STATIC_URL }}css/site_base.css" rel="stylesheet"/>
       <title>{% block title %}Crete-GIS{% endblock %}</title>
 
 {% endblock %}
+
+{% block header %}
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="{% url "home" %}">GeoNode</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            {% block tabs %}
+            <li id="nav_layers">
+              <a href="{% url "layer_browse" %}">{% trans "Layers" %}</a>
+            </li>
+            <li id="nav_maps">
+              <a href="{% url "maps_browse" %}">{% trans "Maps" %}</a>
+            </li>
+            <li id="nav_documents">
+              <a href="{% url "document_browse" %}">{% trans "Documents" %}</a>
+            </li>
+        <!--    <li id="nav_people">
+              <a href="{% url "profile_browse" %}">{% trans "People" %}</a>
+            <li id="nav_groups">
+              <a href="{% url "group_list" %}">{% trans "Groups" %}</a>
+            </li> -->
 {% block extra_tab %}
-<li id="nav_nomoi" class="dropdown">
-  <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-    {% trans "Διευθύνσεις" %}
-    <i class="caret"></i>
-  </a>
-  <ul class="dropdown-menu">
-    <li><a href="/layers/?limit=100&offset=0&regions__name__in=heraklion"><{% trans "ΠΕ Ηρακλείου" %}</a></li>
-    <li><a href="/layers/?limit=100&offset=0&regions__name__in=chania"><{% trans "ΠΕ Χανίων" %}</a></li>
-    <li><a href="/layers/?limit=100&offset=0&regions__name__in=rethymno"><{% trans "ΠΕ Ρεθύμνης" %}</a></li>
-    <li><a href="/layers/?limit=100&offset=0&regions__name__in=lasithi"><{% trans "ΠΕ Λασιθίου" %}</a></li>
-  </ul>
-</li>
+    <li id="nav_nomoi" class="dropdown">
+      <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+        {% trans "Διευθύνσεις" %}
+        <i class="caret"></i>
+      </a>
+      <ul class="dropdown-menu">
+        <li><a href="/layers/?limit=100&offset=0&regions__name__in=heraklion"><{% trans "ΠΕ Ηρακλείου" %}</a></li>
+        <li><a href="/layers/?limit=100&offset=0&regions__name__in=chania"><{% trans "ΠΕ Χανίων" %}</a></li>
+        <li><a href="/layers/?limit=100&offset=0&regions__name__in=rethymno"><{% trans "ΠΕ Ρεθύμνης" %}</a></li>
+        <li><a href="/layers/?limit=100&offset=0&regions__name__in=lasithi"><{% trans "ΠΕ Λασιθίου" %}</a></li>
+      </ul>
+   </li>
 
-<li id="nav_polites" class="dropdown">
-  <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-    {% trans "Πολίτες" %}
-    <i class="caret"></i>
-  </a>
-  <ul class="dropdown-menu">
-    <li><a href="{% url "new_map" %}"><{% trans "Χάρτες" %}</a></li>
-  </ul>
-</li>
-
-<li id="nav_browse">
-  <a href="{% url "about" %}">{% trans "About" %}</a>
-</li>
-
-
+   <li id="nav_polites" class="dropdown">
+     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+      {% trans "Πολίτες" %}
+      <i class="caret"></i>
+     </a>
+     <ul class="dropdown-menu">
+       <li><a href="{% url "new_map" %}"><{% trans "Χάρτες" %}</a></li>
+     </ul>
+   </li>
+   <li id="nav_groups">
+     <a href="{% url "group_list" %}">{% trans "Groups" %}</a>
+   </li>
+   <li id="nav_browse">
+     <a href="{% url "about" %}">{% trans "Σχετικά" %}</a>
+  </li>
 {% endblock %}
+
+            {% endblock %}
+          </ul>
+          <form class="navbar-form" id="search" action="{% url "search" %}" >
+            <div class="col-md-3">
+              <div class="input-group">
+                {% if HAYSTACK_SEARCH %}
+                <input id="search_input" type="text" placeholder="Search" class="form-control" name="q">
+                {% else %}
+                <input id="search_input" type="text" placeholder="Search" class="form-control" name="title__icontains">
+                {% endif %}
+                <span class="input-group-btn">
+                  <button class="btn btn-primary" type="submit"><i class="fa fa-search"></i></button>
+                </span>
+              </div>
+            </div>
+          </form>
+         <ul class="nav navbar-nav navbar-right">
+            {% if not user.is_authenticated and REGISTRATION_OPEN %}
+            <li><a href="{% url "account_signup" %}">{% trans "Register" %}</a></li>
+            {% endif %}
+            {% if user.is_authenticated %}
+            <li>
+              <a href="#" data-toggle="modal" data-target="#UserModal" role="button" aria-expanded="false">
+                {% avatar user 30 %} {{ user.username }}
+              </a>
+            </li>
+            {% else %}
+            <li>
+              <a href="#" data-toggle="modal" data-target="#SigninModal" role="button" >
+                {% trans "Sign in" %} 
+              </a>
+            </li>
+            {% endif %}
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+    {% endblock header %}
 
 {% block footer %} 
 <footer>
