Adding group links into navbar

--- a/crete_gis/templates/site_base.html
+++ b/crete_gis/templates/site_base.html
@@ -42,10 +42,10 @@
         <i class="caret"></i>
       </a>
       <ul class="dropdown-menu">
-        <li><a href="/layers/?limit=100&offset=0&regions__name__in=heraklion">{% trans "ΠΕ Ηρακλείου" %}</a></li>
-        <li><a href="/layers/?limit=100&offset=0&regions__name__in=chania">{% trans "ΠΕ Χανίων" %}</a></li>
-        <li><a href="/layers/?limit=100&offset=0&regions__name__in=rethymno">{% trans "ΠΕ Ρεθύμνης" %}</a></li>
-        <li><a href="/layers/?limit=100&offset=0&regions__name__in=lasithi">{% trans "ΠΕ Λασιθίου" %}</a></li>
+        <li><a href="/groups/group/pe_irakleiou/?limit=100&offset=0">{% trans "ΠΕ Ηρακλείου" %}</a></li>
+        <li><a href="/groups/group/pe_chaniwn/?limit=100&offset=0">{% trans "ΠΕ Χανίων" %}</a></li>
+        <li><a href="/groups/group/pe_rethymnis/?limit=100&offset=0">{% trans "ΠΕ Ρεθύμνης" %}</a></li>
+        <li><a href="/groups/group/pe_lasithiou/?limit=100&offset=0">{% trans "ΠΕ Λασιθίου" %}</a></li>
       </ul>
    </li>
 
