Translating the navbar

--- a/crete_gis/templates/site_base.html
+++ b/crete_gis/templates/site_base.html
@@ -22,13 +22,13 @@
           <ul class="nav navbar-nav">
             {% block tabs %}
             <li id="nav_layers">
-              <a href="{% url "layer_browse" %}">{% trans "Layers" %}</a>
+              <a href="{% url "layer_browse" %}">{% trans "Δεδομένα" %}</a>
             </li>
             <li id="nav_maps">
-              <a href="{% url "maps_browse" %}">{% trans "Maps" %}</a>
+              <a href="{% url "maps_browse" %}">{% trans "Χάρτες" %}</a>
             </li>
             <li id="nav_documents">
-              <a href="{% url "document_browse" %}">{% trans "Documents" %}</a>
+              <a href="{% url "document_browse" %}">{% trans "Έγγραφα" %}</a>
             </li>
         <!--    <li id="nav_people">
               <a href="{% url "profile_browse" %}">{% trans "People" %}</a>
@@ -59,7 +59,7 @@
      </ul>
    </li>
    <li id="nav_groups">
-     <a href="{% url "group_list" %}">{% trans "Groups" %}</a>
+     <a href="{% url "group_list" %}">{% trans "Ομάδες" %}</a>
    </li>
    <li id="nav_browse">
      <a href="{% url "about" %}">{% trans "Σχετικά" %}</a>
