Fixing img 404 not found on footer

--- a/crete_gis/templates/site_base.html
+++ b/crete_gis/templates/site_base.html
@@ -148,11 +148,11 @@
 				</ul>
 			</div>
 			<div class="col-md-2">
-                          <img src="../static/img/perifereia_logo.jpg" class="img-thumbnail" alt="perifereia_kritis" width="259" height="68">
+                          <img src="{{ SITEURL }}/static/img/perifereia_logo.jpg" class="img-thumbnail" alt="perifereia_kritis" width="259" height="68">
 
                           </div>
 			<div class="col-md-4 text-right">
-				<p><img src="../static/img/senselab_3.jpg"></p>
+				<p><img src="{{ SITEURL }}/static/img/senselab_3.jpg"></p>
 				<ul class="list-unstyled">
 					<li>SenseLab Team</li>
                                         <li><a href="http://senselab.tuc.gr">senselab.tuc.gr</a></li>
