Change footer's logo

--- a/crete_gis/templates/site_base.html
+++ b/crete_gis/templates/site_base.html
@@ -156,7 +156,7 @@
 
                           </div>
 			<div class="col-md-4 text-right">
-				<p><img src="{{ SITEURL }}/static/img/senselab_3.jpg"></p>
+				<p><img src="{{ SITEURL }}/static/img/senselab_trans_logo.png"></p>
 				<ul class="list-unstyled">
 					<li>SenseLab Team</li>
                                         <li><a href="http://senselab.tuc.gr">senselab.tuc.gr</a></li>
