Change Crete_gis 's logo

--- a/crete_gis/static/css/site_base.css
+++ b/crete_gis/static/css/site_base.css
@@ -1,7 +1,7 @@
 .navbar-brand {
-    width: 40px;
+    width: 149px;
     height: 35px;
-    background: transparent  url(../img/senselab_3.jpg) no-repeat;
+    background: transparent  url(../img/crete_gis_logo.jpg) no-repeat;
 }
 
 .jumbotron {
