--- a/crete_gis/templates/site_index.html
+++ b/crete_gis/templates/site_index.html
@@ -67,7 +67,7 @@ This is where you can override the hero area block. You can simply modify the co
     <div class="row home-facets">
     {% with facet_type='home' %}
      {% facets as facets %}
-      <div class="col-md-4">
+      <div class="col-md-6">
         <p><a href="{% url "layer_browse" %}"><i class="fa fa-square-o fa-5x rotate-45"></i></a></p>
         <h2><a href="{% url "layer_browse" %}">{{ facets.layer|default:_("No") }} {% blocktrans count counter=facets.layer %}Layer{% plural %}Layers{% endblocktrans %}</a></h2>
         {% if user.is_authenticated %}
@@ -76,7 +76,7 @@ This is where you can override the hero area block. You can simply modify the co
         <p class="text-center"><a class="btn btn-default" href="{% url "layer_browse" %}" role="button">{% trans "Explore layers" %} &raquo;</a></p>
         {% endif %}
       </div>
-      <div class="col-md-4">
+      <div class="col-md-6">
         <p><a href="{% url "maps_browse" %}"><i class="fa fa-map-marker fa-5x"></i></a></p>
         <h2><a href="{% url "maps_browse" %}">{{ facets.map|default:_("No") }} {% blocktrans count counter=facets.map %}Map{% plural %}Maps{% endblocktrans %}</a></h2>
         {% if user.is_authenticated %}
@@ -85,11 +85,11 @@ This is where you can override the hero area block. You can simply modify the co
         <p><a class="btn btn-default" href="{% url "maps_browse" %}" role="button">{% trans "Explore maps" %} &raquo;</a></p>
         {% endif %}
       </div>
-      <div class="col-md-4">
+   <!--   <div class="col-md-4">
         <p><a href="{% url "profile_browse" %}"><i class="fa fa-user fa-5x"></i></a></p>
         <h2><a href="{% url "profile_browse" %}">{{ facets.user|default:_("No") }} {% blocktrans count counter=facets.user %}User{% plural %}Users{% endblocktrans %}</a></h2>
         <p><a class="btn btn-default" href="{% url "profile_browse" %}" role="button">{% trans "See users" %} &raquo;</a></p>
-      </div>
+      </div> -->
     {% endwith %}
     </div>
   </div>
