changing about.html page's document

--- a/crete_gis/templates/about.html
+++ b/crete_gis/templates/about.html
@@ -17,11 +17,11 @@
 <p>
 Τα δεδομένα που δημοσιεύθηκαν προέρχονται από όλες τις Περιφερειακές Ενότητες της Περιφέρειας Κρήτης δηλαδή την ΠΕ Ηρακλείου, ΠΕ Χανίων, ΠΕ Ρεθύμνης και ΠΕ Λασιθίου.
 <p>
-Ο χρήστης έχει την δυνατότητα να αναζητήσει και να προβάλλει γεωχωρικά δεδομένα αλλά και να δημιουργήσει τους δικούς του χάρτες τους οποίους μπορεί να αποθηκεύσει ή και να εκτυπώσει.
+Ο χρήστης έχει την δυνατότητα μέσα από ένα κατάλογο δεδομένων να αναζητήσει και να προβάλλει γεωχωρικά δεδομένα, να τα κατεβάσει, να εμφανίσει πολλαπλά θεματικά επίπεδα ταυτόχρονα, αλλά και να θέσει χωρικά ερωτήματα σε αυτά. 
 </p>
-<p>
+<!-- <p>
 Οι πιστοποιημένοι χρήστες έχουν τη δυνατότητα να εισάγουν δεδομένα, να τα τροποποιούν αλλά και να αναπτύσσουν διαδικτυακές ομάδες επικοινωνώντας μεταξύ τους μέσω μηνυμάτων ή ειδοποιήσεων μέσα από το σύστημα του Crete-GIS. 
-</p>
+</p> -->
   </div>
     <div class="col-sm-4">
     <img src="../static/img/perifereia_logo.jpg" class="img-thumbnail" alt="perifereia_kritis" width="304" height="236">
