--- a/crete_gis/templates/site_base.html
+++ b/crete_gis/templates/site_base.html
@@ -46,10 +46,19 @@
             <i class="caret"></i>
             </a>
             <ul class="dropdown-menu">
-              <li><a href="/groups/group/pe_irakleiou/?limit=100&offset=0">{% trans "ΠΕ Ηρακλείου" %}</a></li>
-              <li><a href="/groups/group/pe_chaniwn/?limit=100&offset=0">{% trans "ΠΕ Χανίων" %}</a></li>
-              <li><a href="/groups/group/pe_rethymnis/?limit=100&offset=0">{% trans "ΠΕ Ρεθύμνης" %}</a></li>
-              <li><a href="/groups/group/pe_lasithiou/?limit=100&offset=0">{% trans "ΠΕ Λασιθίου" %}</a></li>
+              <li><a href="">{% trans "Διεύθυνση Αναπτυξιακού Προγραμματισμού" %}</a></li>
+              <li><a href="">{% trans "Διεύθυνση Περιβάλλοντος και Χωρικού Σχεδιασμού" %}</a></li>
+              <li><a href="">{% trans "Διευθύνσεις Τεχνικών Έργων Περιφερειακών Ενοτήτων" %}</a></li>
+              <li><a href="">{% trans "Διεύθυνση Διαφάνειας και Ηλεκτρονικής Διακυβέρνησης" %}</a></li>
+              <li><a href="">{% trans "Διεύθυνση Εξυπηρέτησης του Πολίτη" %}</a></li>
+              <li><a href="">{% trans "Διεύθυνση Διοικητικού - Οικονομικού Περιφερειακών Ενοτήτων" %}</a></li>
+              <li><a href="">{% trans "Διευθύνσεις Αγροτικής Οικονομίας και Κτηνιατρικής Περιφερειακών Ενοτήτων" %}</a></li>
+              <li><a href="">{% trans "Διεύθυνση Βιομηχανίας, Ενέργειας και Φυσικών Πόρων" %}</a></li>
+              <li><a href="">{% trans "Διεύθυνση Διά Βίου Μάθησης, Απασχόλησης και Εμπορίου" %}</a></li>
+              <li><a href="">{% trans "Διεύθυνση Τουρισμού" %}</a></li>
+              <li><a href="">{% trans "Διευθύνσεις Ανάπτυξης Περιφερειακών Ενοτήτων" %}</a></li>
+              <li><a href="">{% trans "Διευθύνσεις Μεταφορών και Επικοινωνιών Περιφερειακών Ενοτήτων" %}</a></li>
+              <li><a href="">{% trans "Διευθύνσεις Δημόσιας Υγείας και Κοινωνικής Μέριμνας Περιφερειακών Ενοτήτων" %}</a></li>
             </ul>
           </li>
 
