Adding sign in on the bar

--- a/crete_gis/templates/site_base.html
+++ b/crete_gis/templates/site_base.html
@@ -96,7 +96,7 @@
               </div>
             </div>
           </form>
-        <!-- <ul class="nav navbar-nav navbar-right">
+         <ul class="nav navbar-nav navbar-right">
             {% if not user.is_authenticated and REGISTRATION_OPEN %}
             <li><a href="{% url "account_signup" %}">{% trans "Register" %}</a></li>
             {% endif %}
@@ -113,7 +113,7 @@
               </a>
             </li>
             {% endif %}
-          </ul> -->
+          </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
