--- a/crete_gis/templates/site_base.html
+++ b/crete_gis/templates/site_base.html
@@ -47,7 +47,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a href="">{% trans "Διεύθυνση Αναπτυξιακού Προγραμματισμού" %}</a></li>
-              <li><a href="">{% trans "Διεύθυνση Περιβάλλοντος και Χωρικού Σχεδιασμού" %}</a></li>
+              <li><a href="/layers/?limit=100&offset=0&keywords__slug__in=-_1">{% trans "Διεύθυνση Περιβάλλοντος και Χωρικού Σχεδιασμού" %}</a></li>
               <li><a href="/layers/?limit=100&offset=0&keywords__slug__in=-">{% trans "Διευθύνσεις Τεχνικών Έργων Περιφερειακών Ενοτήτων" %}</a></li>
               <li><a href="">{% trans "Διεύθυνση Διαφάνειας και Ηλεκτρονικής Διακυβέρνησης" %}</a></li>
               <li><a href="">{% trans "Διεύθυνση Εξυπηρέτησης του Πολίτη" %}</a></li>
