Changing style on index page

--- a/crete_gis/static/css/site_base.css
+++ b/crete_gis/static/css/site_base.css
@@ -5,7 +5,7 @@
 }
 
 .jumbotron {
-    background: #028baf none repeat scroll 0 0;
+    background: #e5e5e5 none repeat scroll 0 0;
 }
 #wrap {
     background: #fff none repeat scroll 0 0;
