--- a/crete_gis/templates/site_index.html
+++ b/crete_gis/templates/site_index.html
@@ -8,7 +8,7 @@ This is where you can override the hero area block. You can simply modify the co
   {% block hero %} 
   <div class="jumbotron">
   <div class="container">
-  <h1>Crete-GIS</h1>
+  <h1><font color="#666666">Crete-GIS</font></h1>
     <!-- Carousel
   ================================================== -->
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -20,7 +20,7 @@ This is where you can override the hero area block. You can simply modify the co
     </ol>
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img class="first-slide" src="../static/img/carousel_3.jpg" alt="" style=" width:100%; height: 500px;">
+        <img class="first-slide" src="../static/img/carousel_3.jpg" alt="" style=" width:100%; height: 400px;">
         <div class="container">
           <div class="carousel-caption">
             <h1>Καλωσήρθατε στο <strong>Crete-GIS Project</strong></h1>
@@ -29,7 +29,7 @@ This is where you can override the hero area block. You can simply modify the co
         </div>
       </div>
       <div class="item">
-        <img class="second-slide" src="../static/img/carousel_2.jpg" alt="" style=" width:100%; height: 500px;">
+        <img class="second-slide" src="../static/img/carousel_2.jpg" alt="" style=" width:100%; height: 400px;">
         <div class="container">
           <div class="carousel-caption">
             <h1>Γεωχωρικά Δεδομένα</h1>
@@ -39,7 +39,7 @@ This is where you can override the hero area block. You can simply modify the co
         </div>
       </div>
       <div class="item">
-        <img class="third-slide" src="../static/img/carousel_4.jpg" alt="" style=" width:100%; height: 500px;">
+        <img class="third-slide" src="../static/img/carousel_4.jpg" alt="" style=" width:100%; height: 400px;">
         <div class="container">
           <div class="carousel-caption">
             <h1>Δημιουργήστε Χάρτες </h1>
