--- a/crete_gis/templates/site_index.html
+++ b/crete_gis/templates/site_index.html
@@ -62,6 +62,7 @@ This is where you can override the hero area block. You can simply modify the co
  </div>
   {% endblock %}
 
+{% comment %}
  {% block mainbody %}
  <div class="container">
     <div class="row home-facets">
@@ -101,3 +102,4 @@ This is where you can override the hero area block. You can simply modify the co
   </div>
   {% endverbatim %}
   {% endblock %}
+{% endcomment %}
